# ice-cream

./: .gitignore  CLAUDE.md  README.md  fastdds_peers.xml  机器人视觉项目技术理解报告.docx  机器人视觉项目技术理解报告.md  目标检测优化点说明报告.docx  目标检测优化点说明报告.md
handeye-calibration/: .gitignore  README.md  config.yaml  online_capture.py  remove_image_samples.py
handeye-calibration/scr/: eyeInHand.py
handeye-calibration/src/: 手眼标定使用说明.md
robot-vision-ros2/: .gitignore  README.md  config.yaml
robot-vision-ros2/scripts/: build.sh  build_msgs_in_tmp.sh  run.sh  run_pipeline_only.sh
robot-vision-ros2/src/center_depth_msgs/: CMakeLists.txt  package.xml
robot-vision-ros2/src/center_depth_msgs/msg/: Centers2D.msg  Centers3D.msg
robot-vision-ros2/src/center_depth_pipeline/: package.xml  setup.cfg  setup.py
robot-vision-ros2/src/center_depth_pipeline/center_depth_pipeline/: cam_hand_eye.py  depth_node.py  detection_node.py  grasp_node.py  image_numpy.py  param_utils.py  pipeline_doctor.py  qt_env.py  queue_utils.py  visualization_node.py
robot-vision-ros2/src/object_base_logger/: README.md  camera2head.md  package.xml  setup.cfg  setup.py
yolo-pose-pipeline/: .gitignore  README.md  config.yaml  extract_frames.py
yolo-pose-pipeline/pose/: data54_421_merged.yaml  train.py
yolo-pose-pipeline/pose/src/: prepare_data.py  realtime_detect_pose.py
yolo-pose-pipeline/src/: prepare_data.py  realtime_detect_pose.py  train.py
yolo-pose-pipeline/yolo_dataset54_421_merged/: pose_classes.yaml
yolo-pose-pipeline/yolo_dataset54_421_merged/labels/: train.cache  val.cache
(+842 files in other folders)
